<resources>
    <string name="app_name">GWSMaterialRangeBarDemo</string>
    <string name="action_settings">Settings</string>
    <string name="title">MaterialRangeBar</string>
    <string name="tickStart">tickStart = 5</string>
    <string name="tickEnd">tickEnd = 10</string>
    <string name="tickInterval">tickInterval = 1</string>
    <string name="tickHeight">tickHeight = 24</string>
    <string name="barWeight">barWeight = 2</string>
    <string name="barColor">barColor = #CCCCCC</string>
    <string name="connectingLineWeight">connectingLineWeight = 4</string>
    <string name="connectingLineColor">connectingLineColor = #3F51B5</string>
    <string name="thumbRadius">thumbRadius = 30</string>
    <string name="thumbColorNormal">pinColor = #3F51B5</string>
    <string name="selectorColorNormal">selectorColor = #3F51B5</string>
    <string name="tickColorNormal">tickColor = #000000</string>
    <string name="confirmNewColor">New</string>
    <string name="confirmDefaultColor">Default</string>
    <string name="colorPickerTitle">Select a Color</string>
    <string name="resetThumbColors">Reset Thumb Colors</string>
    <string name="leftIndexValue">0</string>
    <string name="leftIndex">Left</string>
    <string name="rightIndexValue">6</string>
    <string name="rightIndex">Right</string>
    <string name="indexSet">Set By Index</string>
    <string name="valueSet">Set By Value</string>

</resources>
