<LinearLayout
        android:id="@+id/mylayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="@color/white">

    <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="40sp"
            android:background="@color/indigo500"
            android:textColor="@color/white"/>

    <com.grottworkshop.gwsmaterialrangebar.RangeBar
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rangebar1"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            custom:tickStart="5"
            custom:tickInterval="1"
            custom:tickEnd="10"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/divider"/>

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/white">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                        <TextView
                                android:id="@+id/leftIndex"
                                style="@style/RoboTheme"
                                android:layout_marginTop="0dp"
                                android:text="@string/leftIndex"/>

                        <EditText
                                android:id="@+id/leftIndexValue"
                                style="@style/RoboTheme"
                                android:layout_marginTop="0dp"
                                android:inputType="number"
                                android:text="@string/leftIndexValue"
                                android:textSize="35sp"/>
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                        <TextView
                                android:id="@+id/rightIndex"
                                style="@style/RoboTheme"
                                android:layout_marginTop="0dp"
                                android:text="@string/rightIndex"/>

                        <EditText
                                android:id="@+id/rightIndexValue"
                                style="@style/RoboTheme"
                                android:layout_marginTop="0dp"
                                android:inputType="number"
                                android:text="@string/rightIndexValue"
                                android:textSize="35sp"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/setIndex"
                            android:layout_gravity="center"
                            android:text="@string/indexSet"
                            android:textColor="@android:color/secondary_text_light"
                            android:layout_height="48dp"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical|center_horizontal"
                            android:textSize="16sp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:textAllCaps="true"/>

                    <TextView
                            android:id="@+id/setValue"
                            android:layout_gravity="center"
                            android:text="@string/valueSet"
                            android:textColor="@android:color/secondary_text_light"
                            android:layout_height="48dp"
                            android:background="@drawable/shadow"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:gravity="center_vertical|center_horizontal"
                            android:textSize="16sp"
                            android:textAllCaps="true"/>

                </LinearLayout>


                <TextView
                        android:id="@+id/enableRange"
                        android:layout_gravity="center"
                        android:text="Toggle range bar"
                        android:textColor="@android:color/secondary_text_light"
                        android:layout_height="48dp"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:textSize="16sp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:textAllCaps="true"/>

                <TextView
                        android:id="@+id/tickStart"
                        style="@style/RoboTheme"
                        android:text="@string/tickStart"/>

                <SeekBar
                        android:id="@+id/tickStartSeek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progress="5"/>

                <TextView
                        android:id="@+id/tickEnd"
                        style="@style/RoboTheme"
                        android:text="@string/tickEnd"/>

                <SeekBar
                        android:id="@+id/tickEndSeek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progress="10"/>

                <TextView
                        android:id="@+id/tickInterval"
                        style="@style/RoboTheme"
                        android:text="@string/tickInterval"/>

                <SeekBar
                        android:id="@+id/tickIntervalSeek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progress="10"
                        android:max="20"/>

                <TextView
                        android:id="@+id/barWeight"
                        style="@style/RoboTheme"
                        android:text="@string/barWeight"/>

                <SeekBar
                        android:id="@+id/barWeightSeek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="8"
                        android:progress="2"/>

                <TextView
                        android:id="@+id/connectingLineWeight"
                        style="@style/RoboTheme"
                        android:text="@string/connectingLineWeight"/>

                <SeekBar
                        android:id="@+id/connectingLineWeightSeek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="15"
                        android:progress="4"/>

                <TextView
                        android:id="@+id/thumbRadius"
                        style="@style/RoboTheme"
                        android:text="@string/thumbRadius"/>

                <SeekBar
                        android:id="@+id/thumbRadiusSeek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="100"
                        android:progress="30"/>

                <Button
                        android:id="@+id/barColor"
                        style="@style/RoboTheme"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/barColor"/>

                <Button
                        android:id="@+id/connectingLineColor"
                        style="@style/RoboTheme"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/connectingLineColor"/>

                <Button
                        android:id="@+id/pinColor"
                        style="@style/RoboTheme"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/thumbColorNormal"/>

                <Button
                        android:id="@+id/tickColor"
                        style="@style/RoboTheme"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tickColorNormal"/>

                <Button
                        android:id="@+id/selectorColor"
                        style="@style/RoboTheme"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/selectorColorNormal"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
